refactor project and rename image files
Change-Id: If795a71137b04f858bc7d4a33b42b71998fad434
Signed-off-by: Or Bar <orbar1@gmail.com>

--- a/NWSense5Theme/res/values/strings.xml
+++ b/NWSense5Theme/res/values/strings.xml
@@ -5,4 +5,8 @@
     <string name="action_settings">Settings</string>
     <string name="hello_world">Hello world!</string>
 
+    <string name="install_button">Install Now</string>
+    <string name="installing_title">Installing Theme</string>
+    <string name="installint_details">Installing now. This may take a few moments</string>
+    
 </resources>
