--- a/NWSense5Theme/res/values/strings.xml
+++ b/NWSense5Theme/res/values/strings.xml
@@ -7,4 +7,7 @@
     <string name="installing_title">Installing Theme</string>
     <string name="installint_details">Installing now. This may take a few moments</string>
     
+    <string name="hide_button">Hide From App Drawer</string>
+    <string name="hide_warning">Are you sure you want to hide the theme from app launcher. This cannot be undone</string>
+    
 </resources>
